# indishooter

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
cmake/: FindINDI.cmake
src/app/: CMakeLists.txt  main.cpp  options.cpp  options.h
src/include/: FilenameGenerator.h  ShooterClient.h  TEvent.h
src/lib/: CMakeLists.txt  FilenameGenerator.cpp  ShooterClient.cpp
